Fixing the alignment of paragraphs

--- a/index.css
+++ b/index.css
@@ -529,7 +529,7 @@
       padding-bottom: 4rem;
     }
 
-    .grid-container * {
+    .grid-container p:not([class]) {
       max-width: 50ch;
     }
 
@@ -621,7 +621,7 @@
       }
 
       .destination-meta {
-        --gap: 3rem;
+        --gap: min(4vw, 6rem);
         justify-content: start;
       }
     }
